# energy_monitor_dashboard

./: LICENSE  README.md  definitions.py  pyproject.toml
.trunk/: trunk.yaml
documentation/source/: conf.py  index.rst
energy_insights_dashboard/: custom_transformers.py  energy_dashboard.py  load_transform_data.py  primär_energie.py  read_energy_im_exports.ipynb  visuals_config.py
energy_insights_dashboard/data/: AKEnergie.xlsx  EinAusFuhrElektrizität.csv  PrimärEnergie2022.xlsx  StromErzeugung2022.csv  StromErzeugung2022Stündlich.csv  ak_energy_primary.pkl  ak_energy_sec.pkl  electricity_2022_daily.pkl  electricity_2022_hourly.pkl  energy_im_export.pkl  primary_energy.pkl
energy_insights_dashboard/elt/: load_transform_ag_energy.py  load_transform_data_import_export.py  load_transform_electricity_2022.py  load_transform_electricity_2022_hourly.py  load_transform_primary_energy.py
energy_insights_dashboard/pages/: electricity_im_export_2023.py  endenergie.py  mythen_energiewende.py  saisonale_schwankungen_erneuerbare.py  volatiliät_erneuerbare_2022.py
